# test-uv-git-workspace

./: main.py  pyproject.toml
