[project]
name = "test-uv-git-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/main-package",
    "packages/core-package",
]

[tool.uv.sources]
core-package = { workspace = true }